--- a/docroot/themes/custom/cu2019_grad/src/sass/components/basic/_ns.scss
+++ b/docroot/themes/custom/cu2019_grad/src/sass/components/basic/_ns.scss
@@ -62,6 +62,8 @@
     @media #{$mediaFullHeader} {
       display: flex;
       justify-content: center;
+      margin: auto;
+      max-width: 1084px;
     }
 
     li {
